Move jquery outside header block.

--- a/braingames/base/templates/braingames/base.jinja
+++ b/braingames/base/templates/braingames/base.jinja
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <title>{% block page_title %}mozilla braingames{% endblock %}</title>
+    <script src="{{ static('js/jquery.js') }}"></script>
     {% block header %}
     {% endblock %}
   </head>
