added package refs to requirements.txt, prescribed lines to settings.py, added request based selection to shrub template, and another .js file to include for mobile users that doesn't run the study. However, I receive the following: ModuleNotFoundError: No module named 'django_user_agents'

--- a/games/shrub/game.jinja
+++ b/games/shrub/game.jinja
@@ -12,6 +12,13 @@
 	<script src="{{ gamestatic('js/plugins/jspsych-instructions.js') }}"></script>
 {% endblock %}
 
-{% block game_script %}
-  {% include 'shrub/game.js' %}
-{% endblock %}
+{% if request.user_agent.is_mobile %}
+	{% block game_script %}
+	  {% include 'shrub/nomobile.js' %}
+	{% endblock %}
+{% else %}
+	{% block game_script %}
+	  {% include 'shrub/game.js' %}
+	{% endblock %}
+{% endif %}
+
