added progress indicator for loading experiment

--- a/games/shrub/game.jinja
+++ b/games/shrub/game.jinja
@@ -3,6 +3,8 @@
 {% block page_title %}Braingames - "Shrub"{% endblock %}
 
 {% block header %}
+  <link href="{{ gamestatic('css/pace.css') }}" rel="stylesheet" />
+  <script src="{{ gamestatic('js/pace.min.js') }}"></script>
   <link href="{{ gamestatic('css/jspsych.css') }}" rel="stylesheet" />
   <script src="{{ gamestatic('js/jspsych.js') }}"></script>
   <script src="{{ gamestatic('js/plugins/jspsych-text.js') }}"></script>
