added survey-text plugin to permit open-ended response to age question (ilana noticed it ran off the screen with all of the coarser multiple choice options), with input validation in loop_function

--- a/games/shrub/game.jinja
+++ b/games/shrub/game.jinja
@@ -12,6 +12,7 @@
   <script src="{{ gamestatic('js/plugins/jspsych-single-stim.js') }}"></script>
   <script src="{{ gamestatic('js/plugins/jspsych-single-audio.js') }}"></script>
   <script src="{{ gamestatic('js/plugins/jspsych-instructions.js') }}"></script>
+  <script src="{{ gamestatic('js/plugins/jspsych-survey-text.js') }}"></script>
   <script src="{{ gamestatic('js/plugins/jspsych-survey-multi-choice.js') }}"></script>
   <script src="{{ gamestatic('js/js.cookie.js') }}"></script>
 {% endblock %}
